[package]
name = "bucket"
version = "0.1.0"
authors = ["Steve Bentley <steve@codebazaar.co.uk>"]

[dependencies]
notify = "4.0.6"
sentry = "0.6.0"
failure = "0.1.3"
azure_sdk_for_rust = "0.10.0"
ring         = "0.13"
md5          = "0.5.0"
RustyXML     = "0.1"
base64       = "0.9"
chrono       = "0.4"
env_logger   = "0.5"
futures      = "0.1"
http         = "0.1"
hyper        = "0.12"
hyper-tls    = "0.3"
log          = "0.4"
mime         = "0.3"
quick-error  = "1.2"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
serde-xml-rs = "0.2"
time         = "0.1"
url          = "1.7"
uuid         = { version = "0.7", features = ["v4"] }
smallvec     = { version = "0.6", features = ["serde"] }
bytes        = "0.4"
tokio-core   = "0.1"

[profile.release]
debug = true
